@startuml

class Product {
    - String head
    - String body
    - string arm
    - String leg
    - String foot
}
abstract class AbstractBuilder {
    # Product product = new Product()
    + abstract void buildHead()
    + abstract void buildBody()
    + abstract void buildFoot()
    + Product build() return product
}
class ConcreteBuilder extends AbstractBuilder {
    + void buildHead()
    + void buildBody()
    + void buildFoot()
}
class Directory {
    - AbstractBuilder builder
    + Product build() return builder.build()
}

AbstractBuilder *-- Product
ConcreteBuilder ..> Product
Directory o-- AbstractBuilder
Directory ..> Product

@enduml